--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="179032" async data-cfasync="false"></script>
 </body>
 </html>
